tests/ui/errors/snapshots/parse_top_level_var_annotated_with_initializer.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:1]
 1 │ 
 2 │ var count: int = 6
   · ─┬─
   ·  ╰── not allowed
   ╰────
  help: Use `const` for a primitive, or a function that returns the value e.g. `fn origin() -> Point { ... }` for a composite · code: [parse.var_not_allowed]
