tests/ui/errors/snapshots/parse_var_in_function_body.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:3]
 2 │ fn test() {
 3 │   var x = 1
   ·   ─┬─
   ·    ╰── expected `let`
 4 │ }
   ╰────
  help: Use `let` to declare a variable: `let x = 0` · code: [parse.expected_let]
